sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition_Line_Item__c/Recruitment_Requisition_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Recruitment Requisition Line Item</label>
    <nameField>
        <displayFormat>SRR Line Item-{0000}</displayFormat>
        <label>Recruitment Requisition Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruitment Requisition Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>