sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition_Line_Item__c/fields/Asset_is_Returnable__c.field-meta.xml
<CustomField>
    <fullName>Asset_is_Returnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset is Returnable</label>
    <type>Checkbox</type>
</CustomField>