sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition_Line_Item__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Recruitment Requisition Line Items</relationshipLabel>
    <relationshipName>Recruitment_Requisition_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>