sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition_Line_Item__c/fields/Maximum_amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_amount__c</fullName>
    <label>Maximum amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>