sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Email Account</fullName>
            </value>
            <value>
                <fullName>Dropbox Account</fullName>
            </value>
            <value>
                <fullName>Salesforce Account</fullName>
            </value>
            <value>
                <fullName>Intranet Account</fullName>
            </value>
            <value>
                <fullName>Airtime</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>