sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition_Line_Item__c/recordTypes/Recruitment_Requisition_Account.recordType-meta.xml
<RecordType>
    <fullName>Recruitment_Requisition_Account</fullName>
    <active>true</active>
    <label>Recruitment Requisition Account</label>
</RecordType>