sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition_Line_Item__c/recordTypes/Recruitment_Requisition_Allowances.recordType-meta.xml
<RecordType>
    <fullName>Recruitment_Requisition_Allowances</fullName>
    <active>true</active>
    <label>Recruitment Requisition Allowances</label>
</RecordType>