sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition_Line_Item__c/recordTypes/Recruitment_Requisition_Asset.recordType-meta.xml
<RecordType>
    <fullName>Recruitment_Requisition_Asset</fullName>
    <active>true</active>
    <label>Recruitment Requisition Asset</label>
</RecordType>