sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition_Line_Item__c/listViews/FLI_Directors_Recruitment_Requisition_Line_Item.listView-meta.xml
<ListView>
    <fullName>FLI_Directors_Recruitment_Requisition_Line_Item</fullName>
    <filterScope>Queue</filterScope>
    <label>FLI Directors</label>
    <queue>FLI_Directors</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>