sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition_Line_Item__c/listViews/HR_Admin_Recruitment_Requisition_Line_Item.listView-meta.xml
<ListView>
    <fullName>HR_Admin_Recruitment_Requisition_Line_Item</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Admin</label>
    <queue>HR_Admin</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>