sfSandBoxCode/force-app/main/default/objects/Recruitment_Requisition_Line_Item__c/listViews/Talent_Director_Recruitment_Requisition_Line_Item.listView-meta.xml
<ListView>
    <fullName>Talent_Director_Recruitment_Requisition_Line_Item</fullName>
    <filterScope>Queue</filterScope>
    <label>Talent Directors</label>
    <queue>Talent_Director</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>